# TJI_Platform

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
Doc/: ARCHITECTURE.md  App整体UI_UX优化方案.md  OTA升级方案.md  OTA第一版职责与协议.md  README.md  addDevice.md  classGuide.md  solarCleanProtocol.md  不确定问题待Review.md  喊话器Payload_UI重做说明.md  客户端自动化测试与自迭代清单.md  悬浮窗与App_UI交互优化方案.md  新增产品线接入规范.md  服务器接口待办.md
Doc/architecture/: README.md  class-responsibility-guide.md  platform-architecture.md  product-line-onboarding.md
Doc/architecture/2026-06-docs-reorganization/: README.md  adr-001-document-information-architecture.md  doc-migration-map.md  quality-gates.md
Doc/features/: README.md  app-ui-ux-optimization.md  device-binding.md  floating-window-ui-optimization.md  speaker-cpp-core-qt-plan.md  speaker-payload-ui-redesign.md
Doc/features/ota/: README.md  ota-v1-responsibility-contract.md  solar-clean-ota-plan.md
Doc/operations/: README.md  client-automation-checklist.md  document-retirement-policy.md  review-questions.md  server-api-backlog.md
Doc/product-lines/: README.md
Doc/product-lines/_template/: README.md  app.md  mcu.md  protocol.md  server.md
Doc/product-lines/droppersixstage/: README.md  app.md  mcu.md  protocol.md  server.md
Doc/product-lines/firebucket/: README.md  app.md  mcu.md  protocol.md  server.md
Doc/product-lines/radiodetection/: README.md  app.md  mcu.md  protocol.md  server.md
Doc/product-lines/solarclean/: README.md  app.md  mcu.md  protocol.md  server.md
Doc/product-lines/speaker/: README.md  app.md  hadp-file-format.md  mcu.md  protocol.md  server.md
Doc/products/droppersixstage/: README.md
Doc/products/radiodetection/: README.md
Doc/protocols/: README.md  solar-clean-mqtt-protocol.md
NetWork/: build.gradle.kts  consumer-rules.pro
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  speaker_core_jni.cpp
app/src/main/res/drawable/: bg_login_bottom.xml  bg_login_top.xml  ic_brand_logo.xml  img_empty_fire_bucket.xml  img_empty_solar_clean.xml  img_login_hero.xml  img_scene_radio_detection.xml
app/src/main/res/mipmap-anydpi-v26/: ic_bucket_round.xml
app/src/main/res/values/: ic_bucket_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/resources/speaker-core-golden/: hadp_ima_adpcm_1s.hadp  (+4 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native/speaker-core/: CMakeLists.txt
native/speaker-core/include/: tji_speaker_core.h
native/speaker-core/src/: adpcm_codec.cpp  audio_tools.cpp  command_json.cpp  hadp_codec.cpp  mqtt_json.cpp  pcm_utils.cpp  speaker_core_c_api.cpp  speaker_core_internal.h  udp_packetizer.cpp  voice_processor.cpp
native/speaker-core/tests/: speaker_core_tests.cpp
native/speaker-core/tools/: generate_hadp_sample.cpp  verify_record_upload.py
server/hydrolink_udp_relay/: README.md  deploy_server.sh  test_udp_4g_relay_server.py  udp_4g_relay_server.py  udp_4g_relay_server.py.remote.bak
server/kokoro_tts_service/: README.md  app.py  deploy_server.sh  requirements.txt  run_local.sh  tji-kokoro-tts.service
server/kokoro_tts_service/static/: app.js  index.html  styles.css
tools/: audit_speaker_desktop_readiness.py  check_docs.py  download_latest_tji_debug_apk.py  run_speaker_field_validation.py  run_speaker_real_device_validation.sh  run_speaker_real_device_validation_from_ci.sh  test_check_docs.py  test_run_speaker_field_validation.py  test_verify_speaker_shadow.py  verify_speaker_shadow.py
(+226 files in other folders)
